css/VFBTermInfo.less
/* ... */
.label.types>.label.label-Histamine_receptor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Hormone {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Ion_channel {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Mechanosensory_ion_channel {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Neuropeptide {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Octopamine_receptor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Odorant_binding {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Olfactory_receptor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Peptide_or_protein_hormone_receptor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Photoreceptor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Serotonin_receptor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Thermosensory_ion_channel {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Transcription_factor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-Tyramine_receptor {
    background-color: #11bffe !important;
    color: black;
}

.label.types>.label.label-UPLOAD {
    background-color: #ff4902 !important;
    color: black;
}



.button-bar-vfbHistoryLinks-back {
    position:absolute;
    left:10px;
    top:6px;
    color: #10bffe;
    text-decoration:none;
    cursor: pointer;
    z-index: 2;
    background: #010101;
}

.button-bar-vfbHistoryLinks-forward {
    position:absolute;
    right:10px;
    top:6px;
    color: #10bffe;
    text-decoration:none;
    cursor: pointer;
    z-index: 2;
    background: #010101;
}

.buttonBarComponentDiv{ 
    z-index: 4;
    background: #010101;
    height: 30px;
}

#bar-div-vfbterminfowidget {
    background-color: transparent !important;
    z-index: 1;
}

.bar-div-vfbterminfowidget_long-and-truncated {
    flex: 1;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    position: absolute;
}

#bar-div-vfbterminfowidget-back-name {
    position: absolute;
    top: 3px;
    left: 24px;
    color: #10bffe;
    text-decoration:none;
    cursor: pointer;
    z-index: 2;
    background: #010101;
    text-align: left;
}

#bar-div-vfbterminfowidget-forward-name {
    position: absolute;
    top: 3px;
    right: 24px;
    color: #10bffe;
    text-decoration:none;
    cursor: pointer;
    z-index: 2;
    background: #010101;
    text-align: right;
}

.button-bar-vfbHistoryLinks-forward i {
    top: 0px;
    right: 0px;
    position: absolute;
}

.buttonBar-button {
	height: 25px;
	width: 33px;
	margin: 0px;
	background: none !important;
	color: white;
	font-size: 16px !important;
	border: 0 !important;
}

.buttonBar-button:hover {
	color: #11bffe;
}

.popup-icon-link {
    color: #ffe406 !important;
    font-size: 15px;
    margin-right: 2px;
    margin-left: 2px;
}

.Collapsible__contentInner li{
    clear: both;
}

// POPUP component style

.popup {
	font-size: 14px;
	font-weight: 200;
	color: white;
	overflow: auto !important;
	-webkit-user-select: text;
	-khtml-user-select: text;
	-moz-user-select: text;
	-ms-user-select: text;
	user-select: text;
}

.popup-link{
	color: @primary_color;
}

.popup-link:hover {
	color: @secondary_color;
	text-decoration: none;
}
.popup a {
	color: @primary_color;
}

.popup p {
	color: @primary_color;
}

.popup a:hover {
	color: @secondary_color;
	text-decoration: none;
}

.popup-image {
	margin: 0 auto;
	text-align: center;
	color: white;
	clear: both;
	max-width: 100%;
    max-height: 260px;
    margin-left: 25px;
}

.popup-image img{
    -webkit-transition: all 0.50s;
    transition: all 0.50s;
    &:hover {
        border: 1px solid gray;
        filter: brightness(130%);
        -webkit-filter: brightness(130%);
        -moz-filter: brightness(130%);
        -o-filter: brightness(130%);
        -ms-filter: brightness(130%);
        -webkit-transition: all 0.50s;
        transition: all 0.50s;
    }
}

.invert {
	-webkit-filter: invert(22%);
	filter: invert(22%);
}

.popup-slick-image {
	margin: 0 auto;
	text-align: center;
	color: white;
}

.popup-icon {
	color: #7F98FF;
	margin-left: 5px;
	margin-right: 5px;
}

.popup-icon-link {
	color: #9bafff;
	font-size: 15px;
	margin-right: 2px;
	margin-left: 2px;
}

.popup-icon-link:hover {
	color: #8098f9;
}

.popup-slick {
	clear: both;
	margin-top: 40px;
}

.popup-title {
	font-weight: 600;
	color: @primary_color;
	cursor: pointer;
	clear: both;
	float: left;
	text-transform: capitalize;
	margin-bottom: 5px;
	margin-top: 5px;
	margin-bottom: 5px;
}

.popup-title:hover {
	color: @secondary_color;
}

.popup-chevron {
	margin-left: 10px;
	margin-top: 7px;
	float: right;
	color: #8A7F7F;
	cursor: pointer;
}

.popup-html {
	clear: both;
}

.popup-text {
	font-size: 14px;
	font-weight: 200;
	text-align: justify;
	color: white;
	clear: both;
}


// Slick styling

/* Slider */
.slick-slider
{
    position: relative;

    -moz-box-sizing: border-box;
         box-sizing: border-box;

    -webkit-user-select: none;
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;

    -webkit-touch-callout: none;
    -khtml-user-select: none;
    -ms-touch-action: pan-y;
        touch-action: pan-y;
    -webkit-tap-highlight-color: transparent;
}

.slick-list
{
    position: relative;

    display: block;
    overflow: hidden;

    margin: 0;
    padding: 0;
}
.slick-list:focus
{
    outline: none;
}
.slick-list.dragging
{
    cursor: pointer;
    cursor: hand;
}
/* ... */

